# templative

./: .gitignore  Brewfile  Brewfile.lock.json  Dockerfile  MANIFEST.in  Makefile  MigrationReadme.md  Pipfile  README.md  __init__.spec  __main__.spec  appscript.py  brewRequirements.txt  customComponents.json  docker-source.py  gameCrafterSession.py  main.py  pyproject.toml  req.txt  requirements.txt  setup.py  sheets.py  stockComponents.json  tcgClient.py  tgcUser.py  troubleshooting.md  upload.py
.github/workflows/: createExecutable.yml
docs/: development.md  exporting.md  svgToPngAttempts.md  troubleshooting.md  weasyPrintFailure.txt
lib/gameCrafterClient/: operations.py
lib/gameManager/: gameLoader.py  gameManager.py
lib/http/: httpClient.py
lib/illustratorClient/: appscript.py  illustrator.py
lib/sheets/: __init__.py  sheets.py
lib/sheetsClient/: sheets.py
lib/svgmanipulation/: operations.py
templative/: Dockerfile  __init__.py  __main__.py  cli.py  componentInfo.py  stockComponentInfo.py
templative.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templative/animation/: __init__.py  packageBuilder.py  shearRenderer.py
templative/commands/: __init__.py  accordionCommands.py  boardCommands.py  deckCommands.py  dieCommands.py  packagingCommands.py  punchoutCommands.py  stockpartCommands.py
templative/create/: __init__.py  accordionCommands.py  boardCommands.py  componentCreator.py  deckCommands.py  dieCommands.py  matCommands.py  packagingCommands.py  projectCreator.py  punchoutCommands.py  stockpartCommands.py  templateComponentProjectUpdater.py
templative/gameCrafter/: README.md  __init__.py  advertisementCreator.py  client.py  componentCreator.py  fileFolderManager.py
templative/gameManager/: README.md  __init__.py  componentProcessor.py  componentStats.py  componentTemplateCreator.py  defineLoader.py  instructionsLoader.py  outputWriter.py  pdfStyles.css  rulesMarkdownProcessor.py
templative/gameUploader/: README.md  __init__.py  client.py  componentCreator.py  instructionsLoader.py
templative/lib/: componentInfo.py  stockComponentInfo.py
templative/manage/: __init__.py  componentQuantitiesProcessor.py  defineLoader.py  depthCalculator.py
templative/playground/: __init__.py  gameStateMaker.py  templateMaker.py
templative/printout/: __init__.py
templative/produce/: __init__.py  gameProducer.py  outputWriter.py  rulesMarkdownProcessor.py
tyruspipeline/: cli.py
tyruspipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utility/: part.json  products.json
(+191 files in other folders)
