[project]
name = "templative"
version = "0.0.1"
authors = [
  { name="Oliver Barnum", email="obarnum@nextday.games" },
]
description = "Collaborate on making board games."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/templative/templative"
Issues = "https://github.com/templative/templative/issues"

[build-system]
requires = ["setuptools>=61.0", "aiofile==3.8.8", "aiohttp==3.9.1", "aiosignal==1.3.1", "asyncclick==8.1.3.4", "attrs==23.1.0", "brotli==1.1.0", "caio==0.9.13", "cairocffi==1.6.1", "cairosvg==2.7.1", "cffi==1.16.0", "colorama==0.4.6", "cssselect2==0.7.0", "defusedxml==0.7.1", "ensure==1.0.4", "fonttools==4.46.0", "fpdf==1.7.2", "fpdf2==2.7.7", "frozenlist==1.4.0", "gitdb==4.0.11", "gitpython==3.1.40", "html5lib==1.1", "idna==3.6", "lxml==4.9.3", "markdown2==2.4.11", "mpmath==1.3.0", "multidict==6.0.4", "pillow==10.1.0", "pycparser==2.21", "pydyf==0.8.0", "pyphen==0.14.0", "six==1.16.0", "smmap==5.0.1", "svgmanip==0.0.12", "svgutils==0.3.4", "tabulate==0.9.0", "tinycss2==1.2.1", "wand==0.6.13", "weasyprint==60.2", "webencodings==0.5.1", "yarl==1.9.4", "zopfli==0.2.3"]
build-backend = "setuptools.build_meta"