[project]
name = "templative"
version = "0.0.1"
authors = [
  { name="Oliver Barnum", email="obarnum@nextday.games" },
]
description = "Collaborate on making board games."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/templative/templative"
Issues = "https://github.com/templative/templative/issues"

[build-system]
requires = ["aiofile==3.8.8", "aiohttp==3.9.1", "aiohttp-cors==0.7.0", "aiosignal==1.3.1", "anyio==4.2.0", "asyncclick==8.1.3.4", "attrs==23.1.0", "bidict==0.22.1", "caio==0.9.13", "ensure==1.0.4", "fpdf==1.7.2", "frozenlist==1.4.1", "h11==0.14.0", "idna==3.6", "lxml==4.9.4", "markdown2==2.4.12", "mpmath==1.3.0", "multidict==6.0.4", "pillow==10.1.0", "python-engineio==4.8.0", "python-socketio==5.10.0", "setuptools==69.0.3", "simple-websocket==1.0.0", "six==1.16.0", "smmap==5.0.1", "sniffio==1.3.0", "svgmanip==0.0.12", "svgutils==0.3.4", "tabulate==0.9.0", "wand==0.6.13", "wsproto==1.2.0", "yarl==1.9.4"]
build-backend = "setuptools.build_meta"